--- a/app/less/_loader.less
+++ b/app/less/_loader.less
@@ -10,6 +10,15 @@
   &.sticky {
     position: sticky;
     transform: translate(-50%, 0%);
+    width: 80px/1.5;
+    height: 80px/1.5;
+
+    div {
+      width: 64px/1.5;
+      height: 64px/1.5;
+      border: 8px/1.5 solid @white;
+      border-color: @main-color transparent transparent;
+    }
   }
 }
 
