--- a/app/less/vacancy/_sidebar.less
+++ b/app/less/vacancy/_sidebar.less
@@ -15,6 +15,12 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+
+		.btn-group {
+			&:not(:last-child) {
+				margin-right: 10px;
+			}
+		}
 	}
 
 	.sidebar__info {
