--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -1,162 +1,13 @@
 .popup
 	.popup__layer
 		#country-popup-vacancy.sidebar-popup
-			//- form
-			//- 	.input-group
-			//- 		input(type="checkbox" id="AT-chbx")
-			//- 		label(for="AT-chbx")
-			//- 			|Австрия
-			//- 	.input-group
-			//- 		input(type="checkbox" id='DE-chbx')
-			//- 		label(for="DE-chbx")
-			//- 			|Германия
-			//- 	.input-group
-			//- 		input(type="checkbox" id='DK-chbx')
-			//- 		label(for="DK-chbx")
-			//- 			|Дания
-			//- 	.input-group
-			//- 		input(type="checkbox" id='NO-chbx')
-			//- 		label(for="NO-chbx")
-			//- 			|Норвегия
-			//- 	.input-group
-			//- 		input(type="checkbox" id='FI-chbx')
-			//- 		label(for="FI-chbx")
-			//- 			|Финляндия
-			//- 	.input-group
-			//- 		input(type="checkbox" id='SE-chbx')
-			//- 		label(for="SE-chbx")
-			//- 			|Швеция
+			form.flex-form
 		#managers-popup.sidebar-popup.managers-popup-vacancy
 		#status-popup.sidebar-popup
-			//- form
-			//- 	.input-group
-			//- 		input(type="checkbox" id="shortfall-chbx")
-			//- 		label(for="shortfall-chbx")
-			//- 			|Недоборы
-			//- 	.input-group
-			//- 		input(type="checkbox" id='selected-chbx')
-			//- 		label(for="selected-chbx")
-			//- 			|Отобраны
-			//- 	.input-group
-			//- 		input(type="checkbox" id='supply-chbx')
-			//- 		label(for="supply-chbx")
-			//- 			|Готовятся к подаче
-			//- 	.input-group
-			//- 		input(type="checkbox" id='wait-chbx')
-			//- 		label(for="wait-chbx")
-			//- 			|Ждут разрешения
-			//- 	.input-group
-			//- 		input(type="checkbox" id='department-chbx')
-			//- 		label(for="department-chbx")
-			//- 			|Готовятся к отъезду
-			//- 	.input-group
-			//- 		input(type="checkbox" id='busy-chbx')
-			//- 		label(for="busy-chbx")
-			//- 			|Трудоустроены
 		#selecting-popup.sidebar-popup
-			//- form
-			//- 	.input-group
-			//- 		input(type="radio" id="date-start-rbtn" name="selecting-rbtn")
-			//- 		label(for="date-start-rbtn")
-			//- 			|По дате начала работы
-			//- 	.input-group
-			//- 		input(type="radio" id='countries-rbtn' name="selecting-rbtn")
-			//- 		label(for="countries-rbtn")
-			//- 			|По странам
-			//- 	.input-group
-			//- 		input(type="radio" id='managers-rbtn' name="selecting-rbtn")
-			//- 		label(for="managers-rbtn")
-			//- 			|По менеджерам
 		#type-work-popup.sidebar-popup
 			form
-				//- .form-group
-				//- 	fieldset
-				//- 		p
-				//- 			|Тип работы
-				//- 		.input-group.radio-group-type-2.hot
-				//- 			.group
-				//- 				input(type="checkbox" id="season-chbx" name="vacancies-chbx" checked="true")
-				//- 				label(for="season-chbx")
-				//- 					|Сезонная
-				//- 				input(type="checkbox" id="practice-chbx" name="vacancies-chbx")
-				//- 				label(for="practice-chbx")
-				//- 					|Практика
-				//- 				input(type="checkbox" id="work-chbx" name="vacancies-chbx")
-				//- 				label(for="work-chbx")
-				//- 					|Рабочая
-				//- .form-group
-				//- 	fieldset
-				//- 		p
-				//- 			|Тип производства
-				//- 		.input-group
-				//- 			input(type="checkbox" id="flowers-chbx")
-				//- 			label(for="flowers-chbx")
-				//- 				|цветы
-				//- 		.input-group
-				//- 			input(type="checkbox" id="vegetables-chbx")
-				//- 			label(for="vegetables-chbx")
-				//- 				|овощи
-				//- 		.input-group
-				//- 			input(type="checkbox" id="cows-chbx")
-				//- 			label(for="cows-chbx")
-				//- 				|коровы
-				//- 		.input-group
-				//- 			input(type="checkbox" id="pigs-chbx")
-				//- 			label(for="pigs-chbx")
-				//- 				|свиньи
-				//- 		.input-group
-				//- 			input(type="checkbox" id="fields-chbx")
-				//- 			label(for="fields-chbx")
-				//- 				|поля
-				//- 	fieldset
-				//- 		.input-group
-				//- 			input(type="checkbox" id="berries-chbx")
-				//- 			label(for="berries-chbx")
-				//- 				|ягоды
-				//- 		.input-group
-				//- 			input(type="checkbox" id="greenhouses-chbx")
-				//- 			label(for="greenhouses-chbx")
-				//- 				|теплицы
-				//- 		.input-group
-				//- 			input(type="checkbox" id="wood-chbx")
-				//- 			label(for="wood-chbx")
-				//- 				|лес
-				//- 		.input-group
-				//- 			input(type="checkbox" id="landscape-chbx")
-				//- 			label(for="landscape-chbx")
-				//- 				|ландшафт
-				//- 		.input-group
-				//- 			input(type="checkbox" id="horses-chbx")
-				//- 			label(for="horses-chbx")
-				//- 				|лошади
 		#date-terms-popup.sidebar-popup
-			//- form
-			//- 	fieldset
-			//- 		p
-			//- 			|Дата начала работы
-			//- 		.input-group
-			//- 			input(type="text" id="before-date-chbx")
-			//- 			label(for="before-date-chbx")
-			//- 				|до
-			//- 		.input-group
-			//- 			input(type="text" id="after-date-chbx")
-			//- 			label(for="after-date-chbx")
-			//- 				|после
-			//- 	fieldset
-			//- 		p
-			//- 			|Срок работы
-			//- 		.group
-			//- 			.input-group
-			//- 				input(type="text" id="from-date-chbx")
-			//- 				label(for="from-date-chbx")
-			//- 					|от
-			//- 			.input-group
-			//- 				input(type="text" id="to-date-chbx")
-			//- 				label(for="to-date-chbx")
-			//- 					|до
-			//- 			.input-group
-			//- 				p
-			//- 					|мес
 		#employer-type-popup.vacancy-modal-popup
 			form
 				p.vacancy-modal__title
@@ -220,54 +71,4 @@
 					button.cancel-bnt
 						span
 							|Отмена
-			//- #type-feedback-popup.vacancy-modal-popup
-			//- 	form
-			//- 		p
-			//- 			|Тип отзыва
-			//- 		.input-group
-			//- 			input(type="radio" id="inf-feedback-rbtn" name="type-feedback-rbtn")
-			//- 			label(for="inf-feedback-rbtn")
-			//- 				i.ico
-			//- 					+svg2('inf-feedback')
-			//- 				|Информационный
-			//- 		.input-group
-			//- 			input(type="radio" id='pos-feedback-rbtn' name="type-feedback-rbtn")
-			//- 			label(for="pos-feedback-rbtn")
-			//- 				i.ico
-			//- 					+svg2('pos-feedback')
-			//- 				|Хороший отзыв
-			//- 		.input-group
-			//- 			input(type="radio" id='neg-feedback-rbtn' name="type-feedback-rbtn")
-			//- 			label(for="neg-feedback-rbtn")
-			//- 				i.ico
-			//- 					+svg2('neg-feedback')
-			//- 				|Плохой отзыв
-			//- 		button.confirm-bnt
-			//- 			span
-			//- 				|OK
-		//- #choice-client-feedback-popup.vacancy-modal-popup
-			//- form
-			//- 	.input-group
-			//- 		input(type="radio" id="client-feedback-rbtn" name="client-feedback-rbtn")
-			//- 		label(for="client-feedback-rbtn")
-			//- 			|Выберите клиента
-			//- 		input.find-client.info-area(type="text")
-			//- 		//- ul.autocomplete-result-list
-			//- 	.input-group
-			//- 		input(type="radio" id='uamf-feedback-rbtn' name="client-feedback-rbtn")
-			//- 		label(for="uamf-feedback-rbtn")
-			//- 			|УАМФ
-			//- 	button.confirm-bnt
-			//- 		span
-			//- 			|OK
-		//- #choice-client-popup.vacancy-modal-popup
-		//- 	form
-		//- 		.input-group
-		//- 			p
-		//- 				|Выберите клиента
-		//- 			input.info-area(type="text")
-		//- 			//- ul.autocomplete-result-list
-		//- 		button.confirm-bnt
-		//- 			span
-		//- 				|OK
 		include vacancy-popup/_vacancy-popup
