--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -35,7 +35,10 @@
 	flex-basis: (228 - 26)/1720 * 100%;
 
 
-
+	a.label, i.label {
+		max-width: unset;
+		width: auto;
+	}
 	.number-of-people {
 		overflow-x: visible;
 		&:not(:last-child) {
