--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -139,6 +139,11 @@
 	margin: 13px;
 	margin-top: 0;
 	margin-bottom: 0;
+
+	a.label, i.label {
+		max-width: unset;
+		width: auto;
+	}
 	// border-right: 1px solid @main-color;
 }
 
@@ -155,6 +160,10 @@
     justify-content: flex-start;
     // overflow-x: auto;
     overflow: hidden;
+
+    a.label {
+    	overflow-x: visible;
+    }
 }
 
 .row__flag {
