--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -151,8 +151,8 @@
 	  height: 100%;
     padding-top: 13px;
     padding-bottom: 13px;
-    margin-right: 13px;
-    margin-left: 13px;
+    // margin-right: 13px;
+    // margin-left: 13px;
     width: 100%;
     letter-spacing: -.05px;
     display: flex;
