--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -14,11 +14,11 @@
 							.sidebar__notes.work-modal__sidebar-notes
 							.sidebar__actions
 								ul.sidebar__action
-									li.sidebar__action-item
-										.input-group
-											input(type="checkbox" id="remove-sending-chbx")
-											label(for="remove-sending-chbx")
-												|Исключить из рассылки
+									li.sidebar__action-item.sidebar-mailing-item
+										//- .input-group
+										//- 	input(type="checkbox" id="remove-sending-chbx")
+										//- 	label(for="remove-sending-chbx")
+										//- 		|Исключить из рассылки
 							.sidebar__menu
 								ul.sidebar__filter
 									li.sidebar__filter-item.active(data-part="employer-data")
