--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -36,9 +36,9 @@
 												|Данные для документов
 									
 									li.sidebar__filter-item(data-part="create-vacancy")
-										.sidebar__filter-wrapper
-											p
-												|Создать вакансию
+										//- .sidebar__filter-wrapper
+										//- 	p
+										//- 		|Создать вакансию
 										
 									li.sidebar__filter-item.delete-item#employer-delete
 				.rows
