--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -249,8 +249,13 @@
 
     width: 250px;
     position: fixed;
-    p {
+    p, a {
     font-weight: 300;
+    color: @white;
+
+    // &:hover {
+    //   color: rgba(@white, 0.8);
+    // }
   }
 
       .os-content {
