--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -194,7 +194,7 @@
 	display: flex;
 	align-items: center;
 	i {
-		&:not(:last-child) {
+		&:not(:last-of-type) {
 			margin-right: 7px;
 		}
 		svg {
