--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -430,7 +430,10 @@
     &.active {
       .sidebar__filter-wrapper {
         background: #85a6cb;
-        color: #d0e4f8;
+        p {
+          color: #d0e4f8;
+        }
+        
       }
     }
   }
