--- a/app/pug/layouts/work-popup/_work-popup.pug
+++ b/app/pug/layouts/work-popup/_work-popup.pug
@@ -35,11 +35,7 @@
 											p
 												|Данные для документов
 									
-									li.sidebar__filter-item(data-part="create-vacancy")
-										//- .sidebar__filter-wrapper
-										//- 	p
-										//- 		|Создать вакансию
-										
+									li.sidebar__filter-item#vacancy-create
 									li.sidebar__filter-item.delete-item#employer-delete
 				.rows
 					#employer-data.employer-data.my-modal-part.active
@@ -55,9 +51,9 @@
 					#data-for-documents.data-for-documents.my-modal-part
 						p
 							|Данные для документов
-					#create-vacancy.create-vacancy.my-modal-part
-						p
-							|Создать вакансию
+					//- #create-vacancy.create-vacancy.my-modal-part
+					//- 	p
+					//- 		|Создать вакансию
 
 
 
