--- a/app/vacancy.pug
+++ b/app/vacancy.pug
@@ -3,6 +3,7 @@ extends pug/base
 
 
 append vars
+	- body.classList.push('vacancy-page')
 
 
 prepend vars
@@ -23,37 +24,16 @@ block head-end
 
 
 
-
-
-
-
-
 block content
 	main.main
-		
 		.sidebar.vacancy-sidebar
 			include pug/layouts/vacancy/sidebar
 		.rows-wrapper.vacancy-rows-wrapper
-			//- .rows.vacancy-rows
-			//- 	.grid
-			//- 		//- .side-column
-			//- 		.columns
-			//- 			.grid-column.first-column
-			//- 			.grid-column.second-column
-			//- 			.grid-column.third-column
-			//- 			.grid-column.fourth-column
-			//- 			.grid-column.fifth-column
-				//- include pug/layouts/vacancy/row
-				//- include pug/layouts/vacancy/row
-				//- include pug/layouts/vacancy/row
-				//- include pug/layouts/vacancy/row
-				//- include pug/layouts/vacancy/row
-				//- include pug/layouts/vacancy/row
-				//- include pug/layouts/vacancy/row
-				//- include pug/layouts/vacancy/archive-row
-		//- include pug/layouts/vacancy/_popup
 	include pug/layouts/vacancy/_popup
-			//- include pug/layouts/header
-			//- include pug/layouts/footer
+
+block scripts
+	script(src=`js/libs.min.js?v=${Date.now()}` defer)
+	link(rel="preload" href=`js/vacancy.min.js?v=${Date.now()}` as="script")
+	script(src=`js/vacancy.min.js?v=${Date.now()}` async)
 
 
