--- a/app/less/_row.less
+++ b/app/less/_row.less
@@ -21,9 +21,9 @@
 	&:hover {
 		background: @hover_row;
 
-		.cell-status__left {
-			border-right: 1px solid @white;
-		}
+		// .cell-status__left {
+		// 	border-right: 1px solid @white;
+		// }
 
 		.table-full__row:first-child .table-full__placeholder.first:after {
 			border-left: 1px solid @white;
