--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -352,6 +352,8 @@
     overflow: hidden;
     transition: background 0.2s linear;
     min-height: 71px;
+    max-height: 250px;
+    overflow-y: auto;
 
     &:focus {
       background: @white;
@@ -912,6 +914,7 @@
     .ico__layer {
       margin-right: 12px;
       width: 24px;
+      min-width: 24px;
     }
 
     .ico-s {
