--- a/app/less/vacancy/_clients.less
+++ b/app/less/vacancy/_clients.less
@@ -26,6 +26,8 @@
 		border-right: 1px solid @white;
 		position: relative;
 		max-width: 211px;
+		flex-grow: 0;
+		flex-shrink: 1;
 	}
 
 	.cell-status {
@@ -33,14 +35,25 @@
 		margin: 0;
 		padding: 0 13px;
 		border-right: 1px solid @white;
+		flex-grow: 0;
+		flex-shrink: 1;
 	}
 
 	.cell-exp {
 		flex-basis: 177/989 * 100%;
+		// margin: 0;
 		margin: 0;
-		padding: 0 13px;
+		flex-grow: 0;
+		flex-shrink: 1;
 		border-right: 1px solid @white;
-		max-width: 177px;
+		// max-width: 151px;
+		overflow-x: hidden;
+
+		.row__cell-wrapper {
+			width: 100%;
+			max-width: 151px;
+			margin: 0 13px;
+		}
 	}
 
 	.cell-notes {
@@ -49,6 +62,8 @@
 		// padding: 0 13px;
 		max-width: 248px;
 		border-right: 1px solid @white;
+		flex-grow: 0;
+		flex-shrink: 1;
 	}
 
 	
@@ -60,7 +75,7 @@
 	.table-full__layer {
 		.table-full__row {
 			&:first-child {
-				.cell-names,
+				.cell-names
 				 {
 					position: relative;
 					overflow: visible;
