--- a/app/less/vacancy/_popup.less
+++ b/app/less/vacancy/_popup.less
@@ -281,8 +281,12 @@
        .input-group {
         &:not(:last-child) {
             border-bottom: 1px solid #fff;
-            padding-bottom: 12px;
+            
         }
+
+		&:not(:last-of-type) {
+			padding-bottom: 12px;
+		}
 
          &:not(:first-of-type) {
             padding-top: 12px;
