--- a/app/less/_popup.less
+++ b/app/less/_popup.less
@@ -244,3 +244,32 @@
         }
     }
 }
+
+
+#managers-popup {
+    .radio-group-type-1 {
+        margin-bottom: 0;
+        display: block;
+
+        .input-group {
+            width: auto;
+            display: inline-block;
+
+            &:not(:last-child) {
+                margin-right: 10px;
+            }
+            
+        }
+
+        .group {
+            &:not(:last-child) {
+                margin-bottom: 10px;
+            }
+        }
+
+        input + label {
+            width: auto;
+            padding: 2px 10px;
+        }
+    }
+}
