--- a/app/less/vacancy/_clients.less
+++ b/app/less/vacancy/_clients.less
@@ -34,6 +34,7 @@
 		flex-basis: 355/989 * 100%;
 		margin: 0;
 		padding: 0 13px;
+		padding-left: 10px;
 		border-right: 1px solid @white;
 		flex-grow: 0;
 		flex-shrink: 1;
@@ -166,6 +167,14 @@
 
 	.clients-layer {
 		width: 100%;
+
+		.row__full-info .row__indicator span {
+			margin-top: 0.25em;
+		}
+
+		.cell-status__left {
+			padding-right: 9px;
+		}
 	}
 
 .switcher {
