--- a/app/pug/layouts/vacancy/_popup.pug
+++ b/app/pug/layouts/vacancy/_popup.pug
@@ -3,6 +3,7 @@
 		#country-popup-vacancy.sidebar-popup
 			form.flex-form
 		#managers-popup.sidebar-popup.managers-popup-vacancy
+			form
 		#status-popup.sidebar-popup
 		#selecting-popup.sidebar-popup
 		#type-work-popup.sidebar-popup
