--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -23,7 +23,9 @@
 				font-weight: 400;
 			}
 		}
+
 		transition: text-decoration 0.8s linear;
+
 		&:hover {
 			text-decoration: underline;
 		}
@@ -35,17 +37,20 @@
 	flex-basis: (229 - 26)/1720 * 100%;
 
 
-	a.label, i.label {
+	a.label,
+	i.label {
 		max-width: unset;
 		width: auto;
 	}
+
 	.number-of-people {
 		overflow-x: visible;
+
 		&:not(:last-child) {
 			margin-right: 15px;
 		}
 	}
-	
+
 }
 
 .row__labels-2-layer {
@@ -54,7 +59,7 @@
 	align-items: center;
 
 	&:hover {
-		.attention__label{
+		.attention__label {
 			background: @orange - 25;
 		}
 
@@ -64,15 +69,16 @@
 	}
 }
 
-.row__indicators, .row__archive {
+.row__indicators,
+.row__archive {
 	flex-basis: (244 - 26)/1720 * 100%;
-	
+
 }
 
 
 .row__name-2 {
 	flex-basis: (389 - 26)/1720 * 100%;
-	
+
 	justify-content: space-between;
 
 	p {
@@ -86,11 +92,12 @@
 
 	p {
 		min-width: 15px;
+
 		&:not(:last-child) {
 			margin-right: 15px;
 		}
 	}
-	
+
 }
 
 .row__notes {
@@ -103,13 +110,14 @@
 
 .row__cell .row__indicator {
 	overflow: visible;
+
 	span {
 		// line-height: 22px;
 		// margin-top: 0.25em;
 		display: inline-block;
 
 	}
-	
+
 }
 
 
@@ -118,7 +126,14 @@
 	margin-left: auto;
 
 	.row__indicator {
-		margin-top: 0.25em;
+		width: 20px;
+		height: 20px;
+		min-width: 20px;
+		font-size: 12px;
+		span {
+			margin-top: 0.3em;
+			font-weight: 700;
+		}
 	}
 }
 
@@ -126,11 +141,12 @@
 	position: relative;
 	z-index: 10;
 	transition: height 0.35s ease-in-out;
-  overflow: hidden;
+	overflow: hidden;
+
 	&.open {
 		display: block;
 	}
-	
+
 
 	&:not(.active) {
 		display: none;
@@ -143,7 +159,7 @@
 }
 
 
-.table-full__layer .table-full__row  {
+.table-full__layer .table-full__row {
 	border-bottom: 1px solid @ligth-gray;
 }
 
@@ -158,14 +174,15 @@ p.status {
 	// &:hover {
 	// 	color: @white;
 	// }
-	
-	
+
+
 }
 
 .table-full__cell {
 	padding: 2px 0px;
 
-	a.label, i.label {
+	a.label,
+	i.label {
 		width: auto;
 	}
 }
@@ -200,9 +217,10 @@ p.status {
 	}
 
 }
+
 .table-full__wait {
 	border-top: 2px solid @teal;
-	border-left: 4px solid  @teal;
+	border-left: 4px solid @teal;
 
 	.table-full__title {
 		color: @teal;
@@ -213,9 +231,10 @@ p.status {
 	}
 
 }
+
 .table-full__department {
 	border-top: 2px solid @blue;
-	border-left: 4px solid  @blue;
+	border-left: 4px solid @blue;
 
 	.table-full__title {
 		color: @blue;
@@ -226,6 +245,7 @@ p.status {
 	}
 
 }
+
 .table-full__busy {
 	border-top: 2px solid @brown;
 	border-left: 4px solid @brown;
@@ -247,12 +267,13 @@ p.status {
 	// padding-bottom: 2px;
 
 	.table-full__title {
-		flex-basis: 244/1480 * 100%;
+		flex-basis: 244/1484 * 100%;
 	}
 
 	.table-full__placeholder.first {
-		flex-basis: 389/1480 * 100%;
-		position: relative; 
+		flex-basis: 389/1484 * 100%;
+		position: relative;
+
 		&:after {
 			content: '';
 			position: absolute;
@@ -268,11 +289,11 @@ p.status {
 	}
 
 	.table-full__placeholder.second {
-		flex-basis: 320/1480 * 100%;
+		flex-basis: 320/1484 * 100%;
 	}
 
 	.table-full__placeholder.third {
-		flex-basis: 531/1480 * 100%;
+		flex-basis: 531/1484 * 100%;
 	}
 }
 
@@ -281,16 +302,16 @@ p.status {
 	padding-top: 7px;
 	font-size: 12px;
 	line-height: 14/12;
-	
+
 }
 
 
 
 .cell-names {
-	flex-basis: (240 - 17)/1480 * 100%;
+	flex-basis: (240 - 17)/1484 * 100%;
 	display: flex;
 	justify-content: space-between;
-	align-items:center;
+	align-items: center;
 	margin-left: 12px;
 	margin-right: 5px;
 
@@ -306,15 +327,15 @@ p.status {
 			font-weight: 400;
 		}
 	}
-	
+
 }
 
 .cell-status {
-	flex-basis: (389 - 16)/1480 * 100%;
+	flex-basis: (389 - 16)/1484 * 100%;
 	padding: 0;
 	margin-left: 6px;
 	margin-right: 10px;
-	
+
 
 	&:hover {
 		.cell-status__controls {
@@ -322,10 +343,11 @@ p.status {
 			visibility: visible;
 			pointer-events: all;
 		}
+
 		p.status {
 			color: @white;
-		
-			
+
+
 			&.choosen {
 				background: @grass-green;
 			}
@@ -356,11 +378,12 @@ p.status {
 
 		}
 	}
-	
+
 }
 
 .cell-exp {
-	flex-basis: (320 - 26)/1480 * 100%;
+	flex-basis: (323 - 26)/1484 * 100%;
+
 	i.label:not(:last-child) {
 		margin-right: 10px;
 	}
@@ -372,9 +395,10 @@ p.status {
 }
 
 .cell-notes {
-	flex-basis: 530/1480 * 100%;
+	flex-basis: 530/1484 * 100%;
 	margin: 0;
 	padding: 0;
+
 	input {
 		background: transparent;
 		text-align: left;
@@ -401,10 +425,10 @@ p.status {
 
 	.ico {
 		width: 6px;
-    height: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+		height: 8px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 }
 
@@ -418,13 +442,14 @@ p.status {
 	// min-width: 130px - 13px;
 	// width: 130px - 13px;
 
-	& > * {
+	&>* {
 		margin-right: 8px;
 	}
 }
 
 .status {
 	display: none;
+
 	&.active {
 		display: block;
 	}
@@ -434,9 +459,10 @@ p.status {
 	// display: none;
 	display: flex;
 	opacity: 0;
-	visibility:hidden;
+	visibility: hidden;
 	pointer-events: none;
 	transition: opacity .25s linear;
+
 	svg {
 		width: 8px;
 		height: 8px;
@@ -454,7 +480,7 @@ p.status {
 			svg {
 				transform: rotate(180deg);
 			}
-			
+
 		}
 	}
 
@@ -468,37 +494,47 @@ p.status {
 		border-bottom-right-radius: 25px;
 	}
 
-			&.choosen {
-				.cell-status__control-right,  .cell-status__control-left   {
-					background: @grass-green;
-				}
-			
-			}
+	&.choosen {
 
-			&.ready {
-				.cell-status__control-right,  .cell-status__control-left   {
-					background: @green;
-				}
-				
-			}
+		.cell-status__control-right,
+		.cell-status__control-left {
+			background: @grass-green;
+		}
 
-			&.wait {
-				.cell-status__control-right,  .cell-status__control-left   {
-					background: @teal;
-				}
-			}
+	}
 
-			&.department {
-				.cell-status__control-right,  .cell-status__control-left   {
-					background: @blue;
-				}
-			}
+	&.ready {
 
-			&.busy {
-				.cell-status__control-right,  .cell-status__control-left   {
-					background: @brown;
-				}
-			}
+		.cell-status__control-right,
+		.cell-status__control-left {
+			background: @green;
+		}
+
+	}
+
+	&.wait {
+
+		.cell-status__control-right,
+		.cell-status__control-left {
+			background: @teal;
+		}
+	}
+
+	&.department {
+
+		.cell-status__control-right,
+		.cell-status__control-left {
+			background: @blue;
+		}
+	}
+
+	&.busy {
+
+		.cell-status__control-right,
+		.cell-status__control-left {
+			background: @brown;
+		}
+	}
 }
 
 
