--- a/app/pug/layouts/_popup.pug
+++ b/app/pug/layouts/_popup.pug
@@ -7,6 +7,7 @@
 		#contact-popup.sidebar-popup
 		#last-contact-popup.sidebar-popup
 		#managers-popup.sidebar-popup.managers-popup-employer
+			form
 		#intermediaries-popup.sidebar-popup
 		#vacancies-popup.sidebar-popup
 			form
