--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -122,7 +122,7 @@
 
 
 .row__full-info {
-	max-width: (1720 - 236)/1720 * 100%;
+	max-width: (1720 - 235)/1720 * 100%;
 	margin-left: auto;
 
 	.row__indicator {
@@ -160,7 +160,11 @@
 
 
 .table-full__layer .table-full__row {
-	border-bottom: 1px solid @ligth-gray;
+
+	&:not(:last-child) {
+		border-bottom: 1px solid @ligth-gray;
+	}
+	
 }
 
 
@@ -280,8 +284,9 @@ p.status {
 			top: 0;
 			height: calc(100% + 9999px);
 			width: 37.2%;
-			min-width: 143px;
-			max-width: 149px;
+			// min-width: 143px;
+			// max-width: 149px;
+			pointer-events: none;
 			right: 0;
 			border-left: 1px solid @ligth-gray;
 		}
@@ -391,6 +396,12 @@ p.status {
 	p:not(:last-child) {
 		margin-right: 20px;
 		min-width: 30px;
+	}
+
+	.prof-education {
+		display: flex;
+		margin-right: 10px;
+		align-items: center;
 	}
 }
 
