--- a/app/less/main.less
+++ b/app/less/main.less
@@ -381,6 +381,10 @@ span.negative {
   background: @purple;
 }
 
+.dirty-green-tag {
+  background: @dirty-green;
+}
+
 .ico {
   width: 20px;
   height: 20px;
