--- a/app/less/vacancy/_clients.less
+++ b/app/less/vacancy/_clients.less
@@ -88,6 +88,7 @@
 						height: calc(100% + 29px);
 						bottom: -4px;
 						background: @white;
+						z-index: -1;
 					}
 				}
 
@@ -105,6 +106,7 @@
 						height: calc(100% + 29px);
 						bottom: -4px;
 						background: @white;
+						z-index: -1;
 					}
 				}
 			}
