--- a/app/less/vacancy/_row.less
+++ b/app/less/vacancy/_row.less
@@ -130,6 +130,7 @@
 		height: 20px;
 		min-width: 20px;
 		font-size: 12px;
+
 		span {
 			margin-top: 0.3em;
 			font-weight: 700;
@@ -162,9 +163,22 @@
 .table-full__layer .table-full__row {
 
 	&:not(:last-child) {
-		border-bottom: 1px solid @ligth-gray;
+		position: relative;
+		border-bottom: 1px solid transparent;
+
+		&:before {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			width: 100%;
+			left: 0;
+			height: 1px;
+			background-color: @ligth-gray;
+			z-index: -5;
+			opacity: 0.99;
+		}
 	}
-	
+
 }
 
 
@@ -192,6 +206,7 @@ p.status {
 }
 
 .table-full__choosen {
+	position: relative;
 	border-top: 2px solid @grass-green;
 	border-left: 4px solid @grass-green;
 
@@ -208,6 +223,7 @@ p.status {
 
 
 .table-full__ready {
+	position: relative;
 	border-top: 2px solid @green;
 	border-left: 4px solid @green;
 
@@ -223,6 +239,7 @@ p.status {
 }
 
 .table-full__wait {
+	position: relative;
 	border-top: 2px solid @teal;
 	border-left: 4px solid @teal;
 
@@ -237,6 +254,7 @@ p.status {
 }
 
 .table-full__department {
+	position: relative;
 	border-top: 2px solid @blue;
 	border-left: 4px solid @blue;
 
@@ -251,6 +269,7 @@ p.status {
 }
 
 .table-full__busy {
+	position: relative;
 	border-top: 2px solid @brown;
 	border-left: 4px solid @brown;
 
@@ -262,6 +281,36 @@ p.status {
 		display: none;
 	}
 
+}
+
+.table-full__grid {
+	pointer-events: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	z-index: 1;
+}
+
+.table-full__grid-column_first {
+	flex-basis: 241/1481 * 100%;
+	border-right: 1px solid @main-color;
+}
+
+.table-full__grid-column_second {
+	flex-basis: 389/1481 * 100%;
+	border-right: 1px solid @main-color;
+}
+
+.table-full__grid-column_third {
+	flex-basis: 320/1481 * 100%;
+	border-right: 1px solid @main-color;
+}
+
+.table-full__grid-column_fourth {
+	flex-basis: 531/1481 * 100%;
 }
 
 .table-full__row:first-child {
@@ -286,6 +335,7 @@ p.status {
 			width: 37.2%;
 			// min-width: 143px;
 			// max-width: 149px;
+			z-index: -1;
 			pointer-events: none;
 			right: 0;
 			border-left: 1px solid @ligth-gray;
