--- a/app/less/_loader.less
+++ b/app/less/_loader.less
@@ -22,7 +22,13 @@
   }
 }
 
-.manufactury-type, .contacts-history, .vacancies-history, .media, .feedback-employer, .feedback-vacancy{
+.manufactury-type,
+.contacts-history,
+.vacancies-history,
+.media,
+.feedback-employer,
+.feedback-vacancy,
+.media-vacancy {
   .lds-ring {
       width: 40px;
       height: 40px;
