--- a/app/less/_modal.less
+++ b/app/less/_modal.less
@@ -1569,6 +1569,8 @@
 }
 
 .client-delete-reason-modal {
+  max-width: 440px;
+  padding: 20px;
   .input-group {
     width: 100%;
     color:@white;
@@ -1576,6 +1578,12 @@
 
   input[type=radio] {
     display: none;
+  }
+
+  .delete-btn {
+    font-size: 10px;
+    bottom: 22px;
+    right: 21px;
   }
 }
 
@@ -1689,6 +1697,10 @@
   .info-area {
     resize: none;
   }
+}
+
+.client-delete-reason-modal__body {
+  margin-bottom: 20px;
 }
 
 
